--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<p>hello</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz App</title>
+    <link rel="stylesheet" href="STYLE5.css"/>
+</head>
+
+<body>
+    <div class="container">
+        <h1>Quiz App</h1>
+        <div id="quiz-container">
+        <div id="question-container" class="hidden">
+        <h2 id="question-text"></h2>
+        <ul id="choices-list">
+            <!--choices will be added dynamically here-->
+        </ul>
+        <button id="next-btn" class="hidden">Next question</button>
+        </div>
+        <div id="result-container" class="hidden">
+            <h2>Your score:</h2>
+            <p id="score"></p>
+            <button id="restart-btn">Restart quiz</button>
+        </div>
+        <button id="start-btn">Start quiz</button>
+        </div>
+            </div>
+            <script src="SCRIPT5.js"></script>
+</body>
+</html>
